# ntkernel-error-category

./: .gitmodules  CMakeLists.txt  Readme.md
include/: config.hpp  ntkernel_category.hpp
include/detail/: ntkernel-table.ipp  ntkernel_category_impl.ipp
src/: generate-table.cpp  ntkernel_category.cpp
test/: main.cpp  static-view.cpp
